# image-processing

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  image processing.sln  run.cpp
cmake/: FetchDependencies.cmake  shakhbat_cvConfig.cmake.in
dependencies/escapi/: escapi.cpp
doc/: README.md
doc/Functions/: README.md
examples/: CMakeLists.txt  qt_web_cam.cpp  run.cpp
image processing/: Source.cpp  image processing.vcxproj  image processing.vcxproj.filters  run.cpp  shakhbat.h
image processing/ColorConvert/: ColorConvert.cpp  (+2 more)
include/: BoxFilter.hpp  Canny.hpp  ColorConvert.hpp  ConvertBitDepth.hpp  DBSCAN.hpp  Equalization.hpp  EqualizeHist.hpp  FAST.hpp  Filter2D.hpp  Flip.hpp  FloodFill.hpp  Gaussian.h  Gaussian.hpp  GaussianPyramid.hpp  GoodFeaturesToTrack.hpp  HarrisCorner.h  HarrisCorner.hpp  Histogram.h  Histogram.hpp  HoughLines.h  HoughLines.hpp  Huffman.hpp  KMeans.h  KMeans.hpp  Magnitude.hpp  MatchTemplate.hpp  MinMaxLoc.hpp  Multiply.hpp  Resize.hpp  Rotate.hpp  Scale.hpp  SeamCarving.h  SeamCarving.hpp  SepFilter2D.hpp  Sobel.h  Sobel.hpp  Translate.hpp  Transposeh.hpp  WarpAffine.hpp  WarpPerspective.hpp  (+2 more)
shakhbat_cv/: CMakeLists.txt
shakhbat_cv/dependencies/stb/: stb_image_write.h
shakhbat_cv/doc/Examples/Color Manipulation/ColorConvert/: README.md
shakhbat_cv/doc/Examples/Color Manipulation/FloodFill/: README.md
shakhbat_cv/doc/Examples/Features Detection/FAST/: README.md
shakhbat_cv/doc/Examples/Features Detection/MatchTemplate/: README.md
shakhbat_cv/doc/Examples/Geometric Transformations/Rotate/: README.md
shakhbat_cv/doc/Examples/Geometric Transformations/WarpAffine/: README.md
shakhbat_cv/doc/Functions/Color Manipulation/ColorConvert/: README.md
shakhbat_cv/doc/Functions/Color Manipulation/ConvertBitDepth/: README.md
shakhbat_cv/doc/Functions/Color Manipulation/FloodFill/: README.md
shakhbat_cv/doc/Functions/Features Detection/FAST/: README.md
shakhbat_cv/doc/Functions/Features Detection/HarrisCorner/: README.md
shakhbat_cv/doc/Functions/Features Detection/HoughLines/: README.md
shakhbat_cv/doc/Functions/Features Detection/KMeans/: README.md
shakhbat_cv/doc/Functions/Features Detection/MatchTemplate/: README.md
shakhbat_cv/doc/Functions/Filters/BoxFilter/: README.md
shakhbat_cv/doc/Functions/Filters/Filter2D/: README.md
shakhbat_cv/doc/Functions/Filters/Gaussian/: README.md
shakhbat_cv/doc/Functions/Filters/SepFilter2D/: README.md
shakhbat_cv/doc/Functions/Filters/Sobel/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/Flip/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/Resize/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/Rotate/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/Scale/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/SeamCarving/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/Translate/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/Transpose/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/WarpAffine/: README.md
shakhbat_cv/doc/Functions/Geometric Transformations/WarpPerspective/: README.md
shakhbat_cv/doc/Functions/Get functions/Get Kernel/: README.md
shakhbat_cv/doc/Functions/Get functions/Get Transformation Matrix/: README.md
shakhbat_cv/doc/Functions/Pixel-Wise/Histogram/: README.md
shakhbat_cv/doc/Functions/Pixel-Wise/MinMaxLoc/: README.md
shakhbat_cv/include/: DBSCAN.h  MatchTemplate.h  SepFilter2D.h  shakhbat_cv.h
shakhbat_cv/include/common/: types.h
shakhbat_cv/include/common/pixel/: pixel_GRAY.h  pixel_HSV.h  pixel_RGB.h  pixel_YCrCb.h
shakhbat_cv/source/: ConvertBitDepth.cpp  FAST.cpp  Histogram.cpp  HoughLines.cpp  Resize.cpp
shakhbat_cv/source/common/image/: LoadFromFile.cpp  image.cpp
shakhbat_cv/source/common/types/: matrix.cpp
shakhbat_cv/test/: CMakeLists.txt
shakhbat_cv/test/include/: test_common.h  test_geometric_transformations.h
shakhbat_cv/test/source/: Test_All.cpp
shakhbat_cv/test/source/color manipulation/: Test_ColorConvert.cpp  Test_ConvertBitDepth.cpp  Test_FloodFill.cpp
shakhbat_cv/test/source/features detection/: Test_FAST.cpp  Test_HarrisCorner.cpp  Test_HoughLines.cpp  Test_KMeans.cpp  Test_MatchTemplate.cpp
shakhbat_cv/test/source/filters/: Test_BoxFilter.cpp  Test_Filter2D.cpp  Test_Gaussian.cpp  Test_SepFilter2D.cpp  Test_Sobel.cpp
shakhbat_cv/test/source/geometric transformations/: Test_Flip.cpp  Test_Resize.cpp  Test_Rotate.cpp  Test_Scale.cpp  Test_SeamCarving.cpp  Test_Translate.cpp  Test_Transpose.cpp  Test_WarpAffine.cpp  Test_WarpPerspective.cpp
source/: BoxFilter.cpp  Canny.cpp  ColorConvert.cpp  ConvertBitDepth.cpp  DBSCAN.cpp  Equalization.cpp  EqualizeHist.cpp  FAST.cpp  Filter2D.cpp  Flip.cpp  FloodFill.cpp  Gaussian.cpp  GaussianPyramid.cpp  GoodFeaturesToTrack.cpp  HarrisCorner.cpp  Histogram.cpp  HoughLines.cpp  Huffman.cpp  KMeans.cpp  Magnitude.cpp  MatchTemplate.cpp  MinMaxLoc.cpp  Multiply.cpp  Resize.cpp  Rotate.cpp  Scale.cpp  SeamCarving.cpp  SepFilter2D.cpp  Sobel.cpp  Translate.cpp  Transpose.cpp
tests/: CMakeLists.txt
tests/include/: test_common.h  test_common.hpp  test_cv.h  test_filters.h
tests/source/color manipulation/: Test_ColorConvert.cpp  Test_ConvertBitDepth.cpp  Test_FloodFill.cpp
tests/source/features detection/: Test_Canny.cpp  Test_DBSCAN.cpp  Test_FAST.cpp  Test_GoodFeaturesToTrack.cpp  Test_HarrisCorner.cpp  Test_HoughLines.cpp  Test_KMeans.cpp  Test_MatchTemplate.cpp
tests/source/filters/: Test_BoxFilter.cpp  Test_Filter2D.cpp  Test_Gaussian.cpp  Test_GaussianPyramid.cpp  Test_SepFilter2D.cpp  Test_Sobel.cpp
tests/source/geometric transformations/: Test_Flip.cpp  Test_Resize.cpp  Test_Rotate.cpp  Test_Scale.cpp  Test_SeamCarving.cpp  Test_Translate.cpp  Test_Transpose.cpp  Test_WarpAffine.cpp  Test_WarpPerspective.cpp
tests/source/pixel wise/: Test_Equalization.cpp  Test_EqualizeHist.cpp  Test_Histogram.cpp  Test_MinMaxLoc.cpp  Test_Multiply.cpp  result_hist.txt  result_histogram.txt
(+317 files in other folders)
